feat: glossary and abbreviation

--- a/Kristelle/main.tex
+++ b/Kristelle/main.tex
@@ -570,7 +570,26 @@ I would like to extend my thanks to Pratham Chhabra, my project partner, for his
     \textbf{Term} & \textbf{Definition} \\
     \midrule
     \endhead
-    % Add glossary terms here
+    
+    % 5G & Fifth generation mobile network \\
+
+    AI at the Edge & Performing AI computations directly on edge devices rather than relying on cloud-based servers. \\
+    \bottomrule
+    Dataflow & The pattern of how data flows between processing elements and memory in a hardware accelerator. \\
+    \bottomrule
+    Hardware Acceleratgor & Specialised hardware designed to perform a particular task more efficiently than general-purpose processors. \\
+    \bottomrule
+    Latency & The time delay between the input and output of a system, measured in clock cycles for this project. \\
+    \bottomrule
+    Pruning & Technique to remove unnecessary weights in a neural network to compress the model. \\ 
+    \bottomrule
+    Quantisation & Reducing the precision of numbers to make the model smaller and faster. \\
+    \bottomrule
+    Sparsity & The presence of a significant number of zero-valued elements in a matrix or tensor. \\
+    \bottomrule
+    Systolic Array & Network of processing elements that rhythmically compute and pass data through the system. \\
+    \bottomrule
+    Tiling & Breaking large matrices into smaller, fixed-sized blocks to fit into hardware constraints.
     \bottomrule
 \end{longtable}
 \addtocounter{table}{-1}
@@ -584,7 +603,23 @@ I would like to extend my thanks to Pratham Chhabra, my project partner, for his
     \textbf{AOA} & \textbf{Angle of attack} \\
     \midrule
     \endhead
-    % Add abbreviations here
+    AI & Artificial Intelligence \\
+    CNN & Convolutional Neural Network \\
+    CPU & Central Processing Unit \\
+    DNN & Deep Neural Network \\
+    DPR & Dynamic Partial Reconfiguration \\
+    FPGA & Field-Programmable Gate Array \\
+    FSM & Finite State Machine \\ 
+    GPU & Graphics Processing Unit \\
+    MAC & Multiply-Accumulate \\
+    MIF & Memory Initialization File \\
+    ML & Machine Learning \\
+    NPU & Neural Processing Unit \\
+    PE & Processing Element \\
+    ReLU & Rectified Linear Unit \\
+    ROM & Read-Only Memory \\
+    RTL & Register-Transfer Level \\
+    
     \bottomrule
 \end{longtable}
 \addtocounter{table}{-1}
